# designing-modern-processors

./: CMakeLists.txt  README.md
cmake/: AddDmpExecutable.cmake  FindcuBLAS.cmake
matrix-multiplication/: CMakeLists.txt  constants.h  cublas_matrix_multiplication.cc  eigen_matrix_multiplication.cc  naive_matrix_multiplication.cc
pi-taylor/: CMakeLists.txt  pi_taylor_parallel.cc  pi_taylor_sequential.cc
scripts/: change_frequencies_p_states.sh
